@@ -238,7 +238,7 @@ class my_sdist(sdist):
         sdist.run(self)
 
 setup(name="python-sybase",
-      version="0.39pre1",
+      version="0.39alpha1",
       maintainer=u"Sebastien Sable",
       maintainer_email="sable@users.sourceforge.net",
       description=doclines[0],
